# python-f3d-extras

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: interactor_callback.py  render_screenshot.py  turntable_video.py
f3d_extras/: __init__.py  files.py  images.py  turntable.py  video.py
tests/: test_files.py  test_images.py  test_turntable.py  test_video.py
