
[project]
name = "f3d-extras"
version = "0.0.1"
requires-python = ">3.10"
dependencies = [
    "f3d >= 3.4.1",
    "tqdm >= 4, < 5",
    "numpy >= 2, < 3",
]

[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.report]
exclude_also = [
    "\\s+\\.\\.\\.",
]
